feat: 增加 v3 模型配置管理
